<resources>
    <string name="app_name">OnlyNotes</string>
    <string name="fragment_home_empty">You don\'t have any note.</string>
    <string name="fragment_category_empty">You don\'t have any category.</string>
    <string name="fragment_trash_empty">Your trash is empty.</string>
    <string name="fragment_menu_notes">Notes</string>
    <string name="fragment_menu_category">Edit category</string>
    <string name="fragment_menu_trash">Trash</string>
    <string name="fragment_edit_note_title">Enter title…</string>
    <string name="fragment_edit_note_text">Enter text…</string>
    <string name="fragment_category_enter">Enter category…</string>
    <string name="fragment_category_add">Add</string>
    <string name="fragment_bottom_sheet_dialog_edit">Edit category name</string>
    <string name="fragment_bottom_sheet_dialog_enter">Enter category...</string>
    <string name="fragment_bottom_sheet_dialog_categorize_select">Select category</string>
    <string name="fragment_bottom_sheet_dialog_trash_delete_restore">Permanently delete or restore?</string>
    <string name="fragment_bottom_sheet_dialog_trash_delete">Delete</string>
    <string name="fragment_bottom_sheet_dialog_trash_restore">Restore</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="empty_title_alert">Please, insert a title.</string>
    <string name="delete_note">The note was deleted.</string>
    <string name="discard_note">The note was discarded.</string>
    <string name="empty_category_alert">Please, insert a category.</string>
    <string name="new_category_alert">Please, insert a new category name.</string>
    <string name="permanently_delete_alert">The note was permanently deleted.</string>
    <string name="restore_alert">The note was restored.</string>
</resources>